2009-11-13  Alexey Proskuryakov  <ap@apple.com>

        Disable websocket tests on Tiger, as they time out.

        Filed <https://bugs.webkit.org/show_bug.cgi?id=31501> to investigate this issue.

        * platform/mac-tiger/Skipped:

2009-11-12  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Dmitry Titov.

        Now that we're tracking key size in the quota, we can't fit as much in.
        https://bugs.webkit.org/show_bug.cgi?id=31451

        * storage/domstorage/quota-expected.txt:
        * storage/domstorage/script-tests/quota.js:
        (testQuota):

2009-11-13  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Darin Adler.

        WebCore::externalRepresentation should update layout before getting render object
        https://bugs.webkit.org/show_bug.cgi?id=31459

        Before this change, the render tree output for this test was wrong.
        Note that #FF0000 (red) becomes #008000 (green) now.

        * platform/mac/svg/custom/gradient-stop-style-change-expected.txt:

2009-11-04  Adam Roben  <aroben@apple.com>

        Test that delegates can modify global objects in isolated worlds

        Fixes <http://webkit.org/b/31124> Tell the WebFrameLoadDelegate when
        window objects in isolated worlds are cleared

        Reviewed by Dave Hyatt.

        * http/tests/security/isolatedWorld/didClearWindowObject-expected.txt: Added.
        * http/tests/security/isolatedWorld/didClearWindowObject.html: Added.
        Tests that the global object in the normal world does not have a
        __worldID property, and that the global object in isolated worlds has
        a __worldID property whose value is equal to the world's ID.

2009-11-13  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Eric Seidel.

        Remove the unnecessary call to dumpDatabaseCallbacks().

        https://bugs.webkit.org/show_bug.cgi?id=31495

        * storage/hash-change-with-xhr.html:

2009-11-13  Hironori Bono  <hbono@chromium.org>
